# IRSSG

./: -d  .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  constraints.txt  deplicate_rep.py  meson.build  pos2ssg-1.0.1-py3-none-any.whl  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  release-pypi.yml  release-testpypi.yml
irssg/: __init__.py  cli.py  deplicate_rep.py
irssg_pkg/: __init__.py  cli.py
irssg_pkg/ssg/: __init__.py
irssg_shim/: __init__.py  cli.py
lib/: comprel.f90  fixed_subspace.f90  get_ssg.f90  invmati.f90  invreal33.f90  irrep_ssg.f90  kgroup.f90  lib_bilbao.f90  lib_chrct.f90  lib_comms.f90  lib_params.f90  linear_rep.f90  mathlib.f90
lib/kLittleGroups/: kLG_1.data  kLG_10.data  kLG_100.data  kLG_101.data  kLG_102.data  kLG_103.data  kLG_104.data  kLG_105.data  kLG_106.data  kLG_107.data  kLG_108.data  kLG_109.data  kLG_11.data  kLG_110.data  kLG_111.data  kLG_112.data  kLG_113.data  kLG_114.data  kLG_115.data  kLG_116.data  kLG_117.data  kLG_118.data  kLG_119.data  kLG_12.data  kLG_120.data  kLG_121.data  kLG_122.data  kLG_123.data  kLG_124.data  kLG_125.data  kLG_126.data  kLG_127.data  kLG_128.data  kLG_129.data  kLG_13.data  kLG_130.data  kLG_131.data  kLG_132.data  kLG_133.data  kLG_134.data  (+190 more)
scripts/: gen_tbbox.py
src_mom2ssg/: MOM2SSG.py  SG_isomorphism.py  SG_utils.py  SSGLabel.py  __init__.py  eqvpg2label.py  find_magprim_unit.py  find_ssg_operation.py  get_ssg_number.py  getcell.py  lirssg.py  load_ssgdata.py  msg.py  pos2abr.py  poscar_io.py  small_func.py  spintrans.py  std2ssg.py  wyckoff.py
src_mom2ssg/smith_form/: gauss_elim.py  libintlng.c  modified_smith_tool.py  smith_form_C.py  smith_tool.py
src_mom2ssg/ssg_data/: PG_dic_list.npy  msg2ssg.pkl  type1sg_ops.npy
src_mom2ssg/ssg_data/TablesSymElemSG/: SymElemSG_1.data  SymElemSG_10.data  SymElemSG_100.data  SymElemSG_101.data  SymElemSG_102.data  SymElemSG_103.data  SymElemSG_104.data  SymElemSG_105.data  SymElemSG_106.data  SymElemSG_109.data  SymElemSG_11.data  SymElemSG_110.data  SymElemSG_111.data  SymElemSG_112.data  SymElemSG_113.data  SymElemSG_114.data  SymElemSG_115.data  SymElemSG_116.data  SymElemSG_117.data  SymElemSG_118.data  SymElemSG_122.data  SymElemSG_123.data  SymElemSG_125.data  SymElemSG_126.data  SymElemSG_127.data  SymElemSG_128.data  SymElemSG_129.data  SymElemSG_13.data  SymElemSG_130.data  SymElemSG_131.data  SymElemSG_132.data  SymElemSG_133.data  SymElemSG_134.data  SymElemSG_135.data  SymElemSG_136.data  SymElemSG_137.data  SymElemSG_138.data  SymElemSG_14.data  SymElemSG_140.data  SymElemSG_141.data  (+135 more)
src_pw/: comms.f90  init.f90  main.f90  unified_main.f90  wave_data_pw.f90
src_wann/: comms.f90  file_util.f90  init.f90  main.f90  wave_data.f90
test/: OUTCAR
test/wann/: POSCAR  tbbox.in
tools/: check_msg_info.py  clean_package.sh  gen_tbbox.py
