[build-system]
requires = [
  "meson>=0.64.0",
  "ninja",
  "meson-python>=0.13.0"
]
build-backend = "mesonpy"

[project]
name = "irssg-pkg"
version = "0.1.1"
description = "IRSSG unified Fortran binary packaged for pip install"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "importlib_resources; python_version < '3.9'",
  "numpy>=1.20.1",
  "scipy>=1.5.4",
  "spglib>=1.15.0",
  "pandas<=2.2",
  "pymatgen>=2021.2.8",
  "phonopy>=2.7.0",
]

[project.scripts]
irssg = "irssg_pkg.cli:main"

[tool.cibuildwheel]
build = ["cp39-*"]
skip = ["pp*", "*musllinux*"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-build = [
  "yum -y install gcc-gfortran lapack-devel blas-devel"
]
environment = { FFLAGS = "-cpp -ffree-line-length-none -fallow-invalid-boz -std=legacy" }
test-command = "python -c \"import irssg_pkg, irssg_pkg.cli; print('ok')\""
