[build-system]
requires = [
  "meson>=0.64.0",
  "ninja",
  "meson-python>=0.13.0"
]
build-backend = "mesonpy"

[project]
name = "irssg-pkg"
version = "1.0.1"
description = "IRSSG unified Fortran binary packaged for pip install"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "importlib_resources; python_version < '3.9'",
  "numpy>=1.20.1",
  "scipy>=1.5.4",
  "spglib>=1.15.0",
  "pymatgen>=2021.2.8",
  "phonopy>=2.7.0",
]

[project.scripts]
irssg = "irssg.cli:main"

[tool.cibuildwheel]
# Build CPython 3.14/3.14t/3.13t and 3.13 -> 3.8 on Linux (descending order)
build = [
  "cp314t-*",  # free-threaded 3.14 (if available)
  "cp314-*",   # CPython 3.14 (if available)
  "cp313t-*",  # free-threaded 3.13
  "cp313-*",
  "cp312-*",
  "cp311-*",
  "cp310-*",
  "cp39-*",
  "cp38-*",
]
skip = ["pp*", "*musllinux*"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-build = [
  "yum -y install gcc-gfortran lapack-devel blas-devel"
]
environment = { FFLAGS = "-cpp -ffree-line-length-none -fallow-invalid-boz -std=legacy", PIP_CONSTRAINT = "constraints.txt" }
