[metadata]
name = irssg
version = 1.0.1
description = IRSSG unified Fortran binary packaged for pip install
author = Sheng Zhang, Ziyin Song, Zhijun Wang
author_email = zhangsheng221@mails.ucas.ac.cn, songziyin@iphy.ac.cn, wzj@iphy.ac.cn

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    importlib_resources; python_version >= "3.8"
    numpy>=1.20.1
    scipy>=1.5.4
    spglib>=1.15.0
    pymatgen>=2021.2.8
    phonopy>=2.7.0
python_requires = >=3.8

[options.package_data]
irssg = data/kLittleGroups/*, bin/*
irssg.ssg = 
    ssg_data/*
    smith_form/*.so
    smith_form/*.c
    *.py
    find_magprim_unit.py
    getcell.py
    pos2abr.py
    poscar_io.py
    label_utils.py

[options.entry_points]
console_scripts =
    irssg = irssg.cli:main
